2014-10-09  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/maildir/maildirinfo.c (maildir_info_imapmunge): Fix
	UTF-8 charset name.

2014-09-19  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriertls.c (tls_create): Initialize temporary ecdh
	parameters.

	* imap: try to print a message on stderr if the alarm() call, that
	detects FAM library breakage, goes off.

	* mkdhparams: default to 2048 DH params for OpenSSL.

	* courier-imap.service: bump up startup timeout, initial service start
	may take several minutes to generate DH parameters for the first
	time.
4.15.1

2014-09-01  Sam Varshavchik  <mrsam@courier-mta.com>

	* tcpd/libcouriergnutls.c: remove any slashes from the server
	hostname.

2014-07-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* gpglib, rfc2045: fix makefiles.

2014-07-13  Sam Varshavchik  <mrsam@courier-mta.com>

	* liblock, couriertls: fix compilation for OpenBSD -- based on a
	patch from Giovanni Bechis <giovanni@paclan.it>.

2014-05-06  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login.c (login_callback): Log logins when running in proxy mode.

	* imaplogin.c (login_callback): Log logins when running in proxy mode.

2014-04-27  Sam Varshavchik  <mrsam@courier-mta.com>

	* courier.spec.in: Update to use systemd macros.

2014-01-12  Sam Varshavchik  <mrsam@courier-mta.com>

	* Factored out the unicode library into a separate package.

4.15.0

2013-11-25  Sam Varshavchik  <mrsam@courier-mta.com>

	* pop3login.c (starttls): Clear input buffer after STARTTLS.

	* imaplogin.c (starttls): Clear input buffer after STARTTLS.

	* Fix various compiler warnings about unchecked results from setuid
	and setgid calls.

2013-11-10  Sam Varshavchik  <mrsam@courier-mta.com>

	* libs/tcpd/libcouriergnutls.c, libs/tcpd/libcouriertls.c: remove the
	TLS_DHCERTFILE setting, and use TLS_CERTFILE for all functionality.
	Read DH parameters from TLS_CERTFILE, or from the new TLS_DHPARAMS
	environment variable.
